# cblas

./: .gitignore  .travis.yml  LICENSE.md  README.md  dub.json  meson.build  package.json  untitled.sublime-project
.github/workflows/: d.yml
examples/gemmTest/: dub.json  gemmTest.d
examples/gemmTest/source/: app.d
source/: cblas.d
source/cblas/: cblas.d  cblas.di  package.d  package.di
